# duckai

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  duckai.service
.github/: dependabot.yml
.github/workflows/: docker-image.yml
src/: config.rs  daemon.rs  error.rs  main.rs  proxy.rs  update.rs
src/serve/: mod.rs  model.rs  route.rs  signal.rs
src/serve/client/: build.rs  mod.rs  pool.rs  route.rs
src/serve/client/dns/: fast.rs  mod.rs
